# realtime-bi-serving-pipeline

./: .gitignore  README.md  pyproject.toml
configs/local/: flink.yaml  kafka.yaml  starrocks.yaml  traffic_profile.yaml
docker/: docker-compose.flink.yml  docker-compose.kafka.yml  docker-compose.starrocks.yml
docker/flink/: Dockerfile
docs/: project_roadmap.md  source_data.md
docs/adr/: 0001-publish-gate.md
docs/architecture/: architecture.md  bi_dashboard_evidence.md  flink_design.md  kafka_design.md  paimon_anomaly_design.md  paimon_bronze_design.md  paimon_clean_design.md  paimon_publish_gate_design.md  paimon_staging_design.md  starrocks_serving_design.md
docs/metrics/: diagnosis_reason_tree.md  mart_grain.md  metric_definition.md
docs/operations/: runbook.md
scripts/: consume_ux_events.py  create_kafka_topic.py  export_starrocks_dashboard.sh  generate_sample_ux_events.py  inspect_ux_events.py  run_demo_e2e.sh  run_flink_kafka_smoke.sh  run_flink_paimon_anomaly.sh  run_flink_paimon_bronze.sh  run_flink_paimon_clean.sh  run_flink_paimon_publish_gate.sh  run_flink_paimon_staging.sh  run_starrocks_paimon_serving.sh  stream_ux_events_to_kafka.py  stream_ux_events_to_stdout.py
sql/flink/: 01_kafka_source_smoke.sql  02_paimon_bronze_ingest.sql  03_paimon_bronze_query.sql  04_paimon_clean_validate.sql  05_paimon_clean_query.sql  06_paimon_funnel_staging.sql  07_paimon_funnel_staging_query.sql  08_paimon_publish_gate.sql  09_paimon_publish_gate_query.sql  10_paimon_funnel_anomaly.sql  11_paimon_funnel_anomaly_query.sql
src/dq/: README.md
(+13 files in other folders)
